Design review for demo

--- a/angular/app/header/header.html
+++ b/angular/app/header/header.html
@@ -3,11 +3,11 @@
 		<div flex="80" flex-offset="10">
 			<div class="DemoHeader-container">
 				<div layout="row" layout-align="space-between">
-					<img src="img/laravel-angular-logo.svg" class="DemoHeader-logo"/>
+					<img src="img/icons/logo.svg" class="DemoHeader-logo"/>
 					<div>
-						<a class="DemoHeader-link" href="https://laravel-angular.readme.io" target="_blank">Docs</a>
-						<a class="DemoHeader-link" href="">Screencasts</a>
-						<a class="DemoHeader-link" href="https://github.com/jadjoubran/laravel5-angular-material-starter" target="_blank">Github</a>
+						<a class="DemoHeader-link md-subhead" href="https://laravel-angular.readme.io" target="_blank">Docs</a>
+						<a class="DemoHeader-link md-subhead" href="">Screencasts</a>
+						<a class="DemoHeader-link md-subhead" href="https://github.com/jadjoubran/laravel5-angular-material-starter" target="_blank">Github</a>
 					</div>
 				</div>
 			</div>
