--- a/angular/app/footer/footer.html
+++ b/angular/app/footer/footer.html
@@ -1,8 +1,8 @@
 <md-content class="Page-Container Footer" ng-controller="FooterController as vm" layout-align="center center">
-	<md-icon md-svg-src="/img/icons/logo.svg"></md-icon>
+	<md-icon md-svg-src="/img/icons/logo-grey.svg"></md-icon>
 	<br/>
 	<br/>
-	<div>
+	<div class="Footer-text">
 		An open source project by <a href="https://github.com/jadjoubran" class="Footer-link" target="_blank"><strong>Jad Joubran</strong></a>.
 		Design by <a href="https://www.linkedin.com/in/nicolesaidy" class="Footer-link" target="_blank"><strong>Nicole Saidy</strong></a>
 	</div>
