--- a/angular/app/header/header.html
+++ b/angular/app/header/header.html
@@ -1,14 +1,12 @@
 <md-content class="Page-Container DemoHeader" ng-controller="HeaderController as vm">
 	<div layout="row">
-		<div flex="80" flex-offset="10">
-			<div class="DemoHeader-container">
-				<div layout="row" layout-align="space-between">
-					<img src="img/icons/logo.svg" class="DemoHeader-logo"/>
-					<div>
-						<a class="DemoHeader-link md-subhead" href="https://laravel-angular.readme.io" target="_blank">Docs</a>
-						<a class="DemoHeader-link md-subhead" href="">Screencasts</a>
-						<a class="DemoHeader-link md-subhead" href="https://github.com/jadjoubran/laravel5-angular-material-starter" target="_blank">Github</a>
-					</div>
+		<div flex="90" flex-offset="5" class="DemoHeader-container">
+			<div layout="row" layout-align="space-between">
+				<img src="img/icons/logo.svg" class="DemoHeader-logo"/>
+				<div layout="row" layout-align="center stretch">
+					<a class="DemoHeader-link md-subhead" href="https://laravel-angular.readme.io" target="_blank">Docs</a>
+					<a class="DemoHeader-link md-subhead" href="">Screencasts</a>
+					<a class="DemoHeader-link md-subhead" href="https://github.com/jadjoubran/laravel5-angular-material-starter" target="_blank">Github</a>
 				</div>
 			</div>
 		</div>
