--- a/angular/app/landing/landing.html
+++ b/angular/app/landing/landing.html
@@ -1,7 +1,7 @@
 <div class="Page-Container Landing" ng-controller="LandingController as vm">
 	<div layout="column" class="Landing-cover" layout-align="center center">
-		<div class="md-body-1 Landing-subtitle">A starter project for Laravel & Angular using Angular Material.</div>
-		<h1 class="md-display-3 Landing-heading">Laravel Angular Material Starter</h1>
+		<div class="md-headline Landing-subtitle">Build your next powerful web app</div>
+		<h1 class="md-display-3 Landing-heading"><strong>Laravel Angular</strong> <span class="Landing-headingLight">Material Starter</span></h1>
 		<md-button class="md-raised md-large Landing-getStarted" href="https://laravel-angular.readme.io/docs/install" target="_blank">Get Started</md-button>
 	</div>
 
@@ -10,69 +10,74 @@
 		<div layout="row">
 			<div flex="50" class="Landing-laravel" layout-align="center center">
 				<h2 class="md-display-2 Landing-laravelAngular-title">Laravel</h2>
-				<div class="md-body-1 Landing-laravelAngular-subtitle">{{vm.laravel_description}}</div>
+				<div class="md-headline Landing-laravelAngular-subtitle">{{vm.laravel_description}}</div>
 				<br/>
 				<div class="DemoCode">
 					<span class="DemoCode-operator">&lt;?php</span><br/>
 					<br/>
-					<span class="DemoCode-highlight">class</span> PostsController <span class="DemoCode-operator">{</span><br/>
+					<span class="DemoCode-highlight">class</span> <span class="DemoCode-secondary">PostsController</span><br/>
+					{<br/>
 					<br/>
-					&nbsp;&nbsp;&nbsp;&nbsp;<span class="DemoCode-highlight">public</span> <span class="DemoCode-secondary">function</span> get()<br/>
-					&nbsp;&nbsp;&nbsp;&nbsp;<span class="DemoCode-operator">{</span><br/>
-					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="DemoCode-highlight">$posts</span> = App\Post<span class="DemoCode-operator">::</span>get();<br/>
-					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="DemoCode-secondary">return</span> response<span class="DemoCode-operator">()</span>-&gt;success(compact(<span class="DemoCode-string">'posts'</span>));<br/>
-					&nbsp;&nbsp;&nbsp;&nbsp;<span class="DemoCode-operator">}</span><br/>
-					<span class="DemoCode-operator">}</span>
+					&nbsp;&nbsp;public <span class="DemoCode-secondary">function</span> <span class="DemoCode-highlight">get</span>()<br/>
+					&nbsp;&nbsp;{<br/>
+					&nbsp;&nbsp;&nbsp;&nbsp;<span class="DemoCode-secondary">$posts</span> = <span class="DemoCode-highlight">App</span>\<span class="DemoCode-highlight">Post</span>::<span class="DemoCode-secondary">get</span>();<br/>
+					<br/>
+					&nbsp;&nbsp;&nbsp;&nbsp;<span class="DemoCode-highlight">return</span> <span class="DemoCode-secondary">response</span>()<br/>
+					&nbsp;&nbsp;&nbsp;&nbsp;-&gt;<span class="DemoCode-secondary">success</span>(compact(<span class="DemoCode-string">'posts'</span>));<br/>
+					&nbsp;&nbsp;}<br/>
+					}
 				</div>
 			</div>
 			<div flex="50" class="Landing-angular" layout-align="center center">
 				<h2 class="md-display-2 Landing-laravelAngular-title">Angular</h2>
-				<div class="md-body-1 Landing-laravelAngular-subtitle">{{vm.angular_description}}</div>
+				<div class="md-headline Landing-laravelAngular-subtitle">{{vm.angular_description}}</div>
 				<br/>
 				<div class="DemoCode">
-					<span class="DemoCode-secondary">function</span> <span class="DemoCode-highlight">LandingController</span><span class="DemoCode-operator">(</span>API<span class="DemoCode-operator">)</span> <span class="DemoCode-operator">{</span><br/>
+					(<span class="DemoCode-secondary">function</span>(){<br/>
+					<span class="DemoCode-string">"use strict"</span>;<br/><br/>
+					<span class="DemoCode-secondary">function</span> <span class="DemoCode-highlight">LandingController</span>(API) {<br/>
 					<br/>
-					&nbsp;&nbsp;&nbsp;&nbsp;<span class="DemoCode-secondary">var</span> <span class="DemoCode-highlight">getPosts</span> = <span class="DemoCode-secondary">function</span><span class="DemoCode-operator">(){</span><br/>
-					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;API.all(<span class="DemoCode-string">'posts'</span>).get<span class="DemoCode-operator">()</span>.then(<span class="DemoCode-secondary">function</span>(response){<br/>
-					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="DemoCode-highlight">this</span>.posts = <span class="DemoCode-highlight">response.data</span>;<br/>
-					&nbsp;&nbsp;&nbsp;&nbsp;<span class="DemoCode-operator">});</span><br/>
-					<span class="DemoCode-operator">}</span>
+					&nbsp;&nbsp;<span class="DemoCode-highlight">this</span>.<span class="DemoCode-highlight">getPosts</span> = <span class="DemoCode-secondary">function</span>(){<br/>
+					&nbsp;&nbsp;&nbsp;&nbsp;API.all(<span class="DemoCode-string">'posts'</span>).get()<br/>
+					&nbsp;&nbsp;&nbsp;&nbsp;.then(<span class="DemoCode-secondary">function</span>(response){<br/>
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="DemoCode-highlight">this</span>.posts = <span class="DemoCode-highlight">response.data</span>;<br/>
+					&nbsp;&nbsp;});<br/>
+					}<br/>
+					<br/>
+					})();
 				</div>
 			</div>
 		</div>
 	</div>
 
 	<div class="Landing-features" layout-align="center center">
-		<h1 class="md-display-1">Laravel Angular Material Starter</h1>
-		<div class="md-body-1 Landing-featuresDescription">
-			Laravel Angular Material Starter provides you with many features required when working with Laravel & Angular. Such as Json Web Token authentication, Angular generators and many more..
+		<h1 class="md-display-2 Landing-featuresMainTitle">Laravel Angular Material Starter</h1>
+		<div class="md-headline Landing-featuresMainDescription">
+			The right features to get you started
 		</div>
 		<br/>
 		<div>
-			<div flex="80" flex-offset="10">
-				<div layout="row" layout-align="space-between">
-					<div flex="33">
-						<div class="Landing-featuresEntry Landing-featuresEntry--restful">
-							<md-icon md-svg-src="/img/icons/restful-api.svg" class="Landing-featuresEntry-icon"></md-icon>
-						</div>
-						<div class="md-headline Landing-featuresTitle">RESTful API</div>
-						<div class="md-subhead Landing-featuresDescription">Build consistent REST APIs and call them fluently using JavaScript, without having to worry about validation errors.</div>
+			<div layout="row" layout-align="space-between">
+				<div flex="33">
+					<div class="Landing-featuresEntry Landing-featuresEntry--restful">
+						<md-icon md-svg-src="/img/icons/restful-api.svg" class="Landing-featuresEntry-icon"></md-icon>
 					</div>
-					<div flex="33">
-						<div class="Landing-featuresEntry Landing-featuresEntry--jwt">
-							<md-icon md-svg-src="/img/icons/json-webtoken.svg" class="Landing-featuresEntry-icon"></md-icon>
-						</div>
-						<div class="md-headline Landing-featuresTitle">Json Web Token Authentication</div>
-						<div class="md-subhead Landing-featuresDescription">Get an out-of-the-box JWT Authentication in your app.</div>
+					<div class="md-headline Landing-featuresTitle">RESTful API</div>
+					<div class="md-subhead Landing-featuresDescription">Build consistent REST APIs and call them fluently using JavaScript, without having to worry about validation errors</div>
+				</div>
+				<div flex="33">
+					<div class="Landing-featuresEntry Landing-featuresEntry--jwt">
+						<md-icon md-svg-src="/img/icons/json-webtoken.svg" class="Landing-featuresEntry-icon"></md-icon>
 					</div>
-					<div flex="33">
-						<div class="Landing-featuresEntry Landing-featuresEntry--generators">
-							<md-icon md-svg-src="/img/icons/angular-generators.svg" class="Landing-featuresEntry-icon"></md-icon>
-						</div>
-						<div class="md-headline Landing-featuresTitle">Angular Generators</div>
-						<div class="md-subhead Landing-featuresDescription">Generate angular features, dialogs, directives, services, filters & configs just like you're used to.</div>
+					<div class="md-headline Landing-featuresTitle">Json Web Token Authentication</div>
+					<div class="md-subhead Landing-featuresDescription">Get an out-of-the-box JWT Authentication in your app that allows you to authenticate users on the fly</div>
+				</div>
+				<div flex="33">
+					<div class="Landing-featuresEntry Landing-featuresEntry--generators">
+						<md-icon md-svg-src="/img/icons/angular-generators.svg" class="Landing-featuresEntry-icon"></md-icon>
 					</div>
-
+					<div class="md-headline Landing-featuresTitle">Angular Generators</div>
+					<div class="md-subhead Landing-featuresDescription">Generate angular features, dialogs, directives, services, filters & configs just like you're used to</div>
 				</div>
 			</div>
 		</div>
