--- a/angular/app/landing/landing.html
+++ b/angular/app/landing/landing.html
@@ -10,7 +10,7 @@
 		<div layout="row">
 			<div flex="50" class="Landing-laravel" layout-align="center center">
 				<h2 class="md-display-2 Landing-laravelAngular-title">Laravel</h2>
-				<div class="md-headline Landing-laravelAngular-subtitle">{{vm.laravel_description}}</div>
+				<div class="md-title Landing-laravelAngular-subtitle">{{vm.laravel_description}}</div>
 				<br/>
 				<div class="DemoCode">
 					<span class="DemoCode-operator">&lt;?php</span><br/>
@@ -18,31 +18,31 @@
 					<span class="DemoCode-highlight">class</span> <span class="DemoCode-secondary">PostsController</span><br/>
 					{<br/>
 					<br/>
-					&nbsp;&nbsp;public <span class="DemoCode-secondary">function</span> <span class="DemoCode-highlight">get</span>()<br/>
-					&nbsp;&nbsp;{<br/>
-					&nbsp;&nbsp;&nbsp;&nbsp;<span class="DemoCode-secondary">$posts</span> = <span class="DemoCode-highlight">App</span>\<span class="DemoCode-highlight">Post</span>::<span class="DemoCode-secondary">get</span>();<br/>
+					&nbsp;&nbsp;&nbsp;&nbsp;public <span class="DemoCode-secondary">function</span> <span class="DemoCode-highlight">get</span>()<br/>
+					&nbsp;&nbsp;&nbsp;&nbsp;{<br/>
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="DemoCode-secondary">$posts</span> = <span class="DemoCode-highlight">App</span>\<span class="DemoCode-highlight">Post</span>::<span class="DemoCode-secondary">get</span>();<br/>
 					<br/>
-					&nbsp;&nbsp;&nbsp;&nbsp;<span class="DemoCode-highlight">return</span> <span class="DemoCode-secondary">response</span>()<br/>
-					&nbsp;&nbsp;&nbsp;&nbsp;-&gt;<span class="DemoCode-secondary">success</span>(compact(<span class="DemoCode-string">'posts'</span>));<br/>
-					&nbsp;&nbsp;}<br/>
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="DemoCode-highlight">return</span> <span class="DemoCode-secondary">response</span>()<br/>
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-&gt;<span class="DemoCode-secondary">success</span>(compact(<span class="DemoCode-string">'posts'</span>));<br/>
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;}<br/>
 					}
 				</div>
 			</div>
 			<div flex="50" class="Landing-angular" layout-align="center center">
 				<h2 class="md-display-2 Landing-laravelAngular-title">Angular</h2>
-				<div class="md-headline Landing-laravelAngular-subtitle">{{vm.angular_description}}</div>
+				<div class="md-title Landing-laravelAngular-subtitle">{{vm.angular_description}}</div>
 				<br/>
 				<div class="DemoCode">
 					(<span class="DemoCode-secondary">function</span>(){<br/>
 					<span class="DemoCode-string">"use strict"</span>;<br/><br/>
 					<span class="DemoCode-secondary">function</span> <span class="DemoCode-highlight">LandingController</span>(API) {<br/>
 					<br/>
-					&nbsp;&nbsp;<span class="DemoCode-highlight">this</span>.<span class="DemoCode-highlight">getPosts</span> = <span class="DemoCode-secondary">function</span>(){<br/>
-					&nbsp;&nbsp;&nbsp;&nbsp;API.all(<span class="DemoCode-string">'posts'</span>).get()<br/>
-					&nbsp;&nbsp;&nbsp;&nbsp;.then(<span class="DemoCode-secondary">function</span>(response){<br/>
-					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="DemoCode-highlight">this</span>.posts = <span class="DemoCode-highlight">response.data</span>;<br/>
-					&nbsp;&nbsp;});<br/>
-					}<br/>
+					&nbsp;&nbsp;&nbsp;&nbsp;<span class="DemoCode-highlight">this</span>.<span class="DemoCode-highlight">getPosts</span> = <span class="DemoCode-secondary">function</span>(){<br/>
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;API.all(<span class="DemoCode-string">'posts'</span>).get()<br/>
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;.then(<span class="DemoCode-secondary">function</span>(response){<br/>
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="DemoCode-highlight">this</span>.posts = <span class="DemoCode-highlight">response.data</span>;<br/>
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;});<br/>
+					&nbsp;&nbsp;&nbsp;&nbsp;}<br/>
 					<br/>
 					})();
 				</div>
@@ -52,7 +52,7 @@
 
 	<div class="Landing-features" layout-align="center center">
 		<h1 class="md-display-2 Landing-featuresMainTitle">Laravel Angular Material Starter</h1>
-		<div class="md-headline Landing-featuresMainDescription">
+		<div class="md-title Landing-featuresMainDescription">
 			The right features to get you started
 		</div>
 		<br/>
