--- a/angular/app/footer/footer.html
+++ b/angular/app/footer/footer.html
@@ -3,8 +3,8 @@
 	<br/>
 	<br/>
 	<div class="Footer-text">
-		An open source project by <a href="https://github.com/jadjoubran" class="Footer-link" target="_blank"><strong>Jad Joubran</strong></a>.
-		Design by <a href="https://www.linkedin.com/in/nicolesaidy" class="Footer-link" target="_blank"><strong>Nicole Saidy</strong></a>
+		An open source project by <a href="https://github.com/jadjoubran" class="Footer-link" target="_blank">Jad Joubran</a>.
+		Design by <a href="https://www.linkedin.com/in/nicolesaidy" class="Footer-link" target="_blank">Nicole Saidy</a>
 	</div>
 	<div class="Footer-text">
 		&copy; 2016 Laravel Angular Material Starter
