--- a/angular/app/landing/landing.html
+++ b/angular/app/landing/landing.html
@@ -1,7 +1,7 @@
 <div class="Page-Container Landing" ng-controller="LandingController as vm">
 	<div layout="column" class="Landing-cover" layout-align="center center">
 		<div class="md-headline Landing-subtitle">Build your next powerful web app</div>
-		<h1 class="md-display-3 Landing-heading"><strong>Laravel Angular</strong> <span class="Landing-headingLight">Material Starter</span></h1>
+		<h1 class="md-display-3 Landing-heading"><strong>laravel angular</strong> <span class="Landing-headingLight">material starter</span></h1>
 		<md-button class="md-raised md-large Landing-getStarted" href="https://laravel-angular.readme.io/docs/install" target="_blank">Get Started</md-button>
 	</div>
 
