Demo is now responsive

--- a/angular/app/header/header.html
+++ b/angular/app/header/header.html
@@ -3,7 +3,7 @@
 		<div flex="90" flex-offset="5" class="DemoHeader-container">
 			<div layout="row" layout-align="space-between">
 				<img src="img/icons/logo.svg" class="DemoHeader-logo"/>
-				<div layout="row" layout-align="center stretch">
+				<div layout="row" layout-align="center stretch" hide-xs>
 					<a class="DemoHeader-link md-subhead" href="https://laravel-angular.readme.io" target="_blank">Docs</a>
 					<a class="DemoHeader-link md-subhead" href="">Screencasts</a>
 					<a class="DemoHeader-link md-subhead" href="https://github.com/jadjoubran/laravel5-angular-material-starter" target="_blank">Github</a>
