fixing demo elements stacked on iOS #130

--- a/angular/app/landing/landing.html
+++ b/angular/app/landing/landing.html
@@ -5,7 +5,7 @@
 		<md-button class="md-raised md-large Landing-getStarted" href="https://laravel-angular.readme.io/docs/install" target="_blank">Get Started</md-button>
 	</div>
 
-	<div class="Landing-laravelAngular">
+	<div class="Landing-laravelAngular" ng-class="{'iOS-hack': vm.iOS}">
 		<div class="Landing-ampersand" hide show-gt-sm>&amp;</div>
 		<div layout="column" layout-gt-sm="row">
 			<div flex="50" class="Landing-laravel" layout-align="center center">
