--- a/angular/app/header/header.html
+++ b/angular/app/header/header.html
@@ -5,7 +5,7 @@
 				<img src="img/icons/logo.svg" class="DemoHeader-logo"/>
 				<div layout="row" layout-align="center stretch" hide-xs>
 					<a class="DemoHeader-link md-subhead" href="https://laravel-angular.readme.io" target="_blank">Docs</a>
-					<a class="DemoHeader-link md-subhead" href="">Screencasts</a>
+					<a class="DemoHeader-link md-subhead" href="https://www.youtube.com/channel/UCTiRXlOapSWfu02rtOdaGvA" target="_blank">Screencasts</a>
 					<a class="DemoHeader-link md-subhead" href="https://github.com/jadjoubran/laravel5-angular-material-starter" target="_blank">Github</a>
 				</div>
 			</div>
