--- a/angular/app/header/header.html
+++ b/angular/app/header/header.html
@@ -7,6 +7,7 @@
 					<a class="DemoHeader-link md-subhead" href="https://laravel-angular.readme.io" target="_blank">Docs</a>
 					<a class="DemoHeader-link md-subhead" href="https://www.youtube.com/watch?v=Auc61qSC3SY&list=PLIiQ4B5FSupiQYLX6kERPV0OhMC7tTbBE" target="_blank">Screencasts</a>
 					<a class="DemoHeader-link md-subhead" href="https://github.com/jadjoubran/laravel5-angular-material-starter" target="_blank">Github</a>
+					<iframe class="DemoHeader-github" src="https://ghbtns.com/github-btn.html?user=jadjoubran&repo=laravel5-angular-material-starter&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
 				</div>
 			</div>
 		</div>
