--- a/angular/app/pages/footer/footer.html
+++ b/angular/app/pages/footer/footer.html
@@ -4,7 +4,7 @@
 <br/>
 <div class="Footer-text">
 	An open source project by <a href="https://github.com/jadjoubran" class="Footer-link" target="_blank">Jad Joubran</a>.
-	Design by <a href="https://www.linkedin.com/in/nicolesaidy" class="Footer-link" target="_blank">Nicole Saidy</a>
+	Design by <a href="http://nicolesaidy.com" class="Footer-link" target="_blank">Nicole Saidy</a>
 </div>
 <div class="Footer-text">
 	&copy; 2016 Laravel Angular Material Starter
