fixed landing page typo

--- a/angular/app/pages/landing/landing.page.html
+++ b/angular/app/pages/landing/landing.page.html
@@ -35,7 +35,7 @@
 				<div class="md-title Landing-laravelAngular-subtitle">Query your API without worrying about validations</div>
 				<br/>
 				<div class="DemoCode">
-					<span class="DemoCode-secondary">Class</span> <span class="DemoCode-highlight">PostsController</span>(API) {<br/>
+					<span class="DemoCode-secondary">Class</span> <span class="DemoCode-highlight">PostsController</span> {<br/>
 					&nbsp;&nbsp;&nbsp;&nbsp;<span class="DemoCode-highlight">constructor</span>(API){<br/>
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="DemoCode-string">'ngInject'</span>;<br/>
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;this.API = API<br/>
