--- a/angular/app/pages/login/login.page.html
+++ b/angular/app/pages/login/login.page.html
@@ -1,7 +1,10 @@
 <md-content class="Page-container">
 	<div flex="80" flex-offset="10">
-		<h1>Login</h1>
+		<div class="Login-formContainer md-whiteframe-z1" layout="column" layout-align="center center">
+			<h1 class="md-headline">Login</h1>
 
-		<login-form></login-form>
+			<login-form></login-form>
+
+		</div>
 	</div>
 </md-content>
