--- a/angular/app/pages/header/header.page.html
+++ b/angular/app/pages/header/header.page.html
@@ -2,7 +2,7 @@
 	<div layout="row">
 		<div flex="90" flex-offset="5" class="DemoHeader-container">
 			<div layout="row" layout-align="space-between">
-				<img src="img/icons/logo.svg" class="DemoHeader-logo"/>
+				<img src="img/icons/logo.svg" ui-sref="app.landing" class="DemoHeader-logo"/>
 				<div layout="row" layout-align="center stretch" hide-xs>
 					<a class="DemoHeader-link md-subhead" href="https://laravel-angular.readme.io" target="_blank">Docs</a>
 					<a class="DemoHeader-link md-subhead" href="https://www.youtube.com/watch?list=PLIiQ4B5FSupiQYLX6kERPV0OhMC7tTbBE&v=_ZWV9KBK2N8" target="_blank">Screencasts</a>
