--- a/angular/app/pages/login/login.page.html
+++ b/angular/app/pages/login/login.page.html
@@ -1,10 +1,9 @@
 <md-content class="Page-container">
-	<div flex="80" flex-offset="10">
-		<div class="Login-formContainer md-whiteframe-z1" layout="column" layout-align="center center">
-			<h1 class="md-headline">Login</h1>
+    <div class="Login-formContainer" layout="column" layout-align="center center">
 
-			<login-form></login-form>
+        <h1 class="md-headline">Log in to your account</h1>
 
-		</div>
-	</div>
+        <login-form></login-form>
+
+    </div>
 </md-content>
