--- a/angular/app/pages/register/register.page.html
+++ b/angular/app/pages/register/register.page.html
@@ -1,7 +1,7 @@
 <md-content class="Page-container">
 	<div flex="80" flex-offset="10">
-		<div class="md-whiteframe-z1" layout="column" layout-align="center center">
-			<h1 class="md-headline">Register</h1>
+		<div class="Register-formContainer" layout="column" layout-align="center center">
+			<h1 class="md-headline">Create an account</h1>
 
 			<register-form></register-form>
 
