Finalized design for JWT reset password. closes #129

--- a/angular/app/pages/forgot-password/forgot-password.page.html
+++ b/angular/app/pages/forgot-password/forgot-password.page.html
@@ -1,5 +1,5 @@
 <md-content class="Page-container">
-    <div layout="column" layout-align="center center">
+    <div class="ForgotPassword-formContainer" layout="column" layout-align="center center">
 
         <h1 class="md-headline">Forgot your password?</h1>
 
