--- a/angular/app/pages/reset-password/reset-password.page.html
+++ b/angular/app/pages/reset-password/reset-password.page.html
@@ -1,5 +1,5 @@
 <md-content class="Page-container">
-    <div layout="column" layout-align="center center">
+    <div class="ResetPassword-formContainer" layout="column" layout-align="center center">
 
         <h1 class="md-headline">Reset Password</h1>
 
